# virtuoso-opensource

./: .gitignore  .profile  configure.in
binsrc/tests/: bmcmp.sql  isql.c
binsrc/tests/biftest/: javavm.c
binsrc/tests/lubm/: trdfrng.sql
binsrc/tests/suite/: bmcmp.sql  csetdisc.sql  sqlo2.sql  tcoll.sql  test_server.sh  testall.sh  testlib.sh  tgeo.sql  tiext.sql  tiri.sql  trdfh.sh  tsql2.sh  tsql3.sh  ttpch.sh  virtuoso-1111.ini  virtuoso-cl.ini
binsrc/tests/suite/tpc-d/: sql_rdf.sql
binsrc/tests/tpc-h/: README.txt  colcopy.sql  gen.sh  ld.sql  ldck.sql  ldfile.sql  ldschema.sql  ldstat.sql  load-qualification.sh  load.sh  load.sql  qualification.sql  query-results.sql  run.sh  run_one_client.sh  run_rf.sh  schema-col.sql  schema-ela.sql  schema.sql  stat.sql  suppfiles.sh  test_fn.sh  tpc-h.sql  virtuoso-1111.ini  virtuoso.ini-100G  warm.sql
binsrc/tests/tpc-h/dbgen/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  bm_utils.c  driver.c  dss.h  makefile  makefile.suite  print.c  qq  tpcd.h  varsub.c
binsrc/tests/tpc-h/dbgen206/: 1.sql  10.sql  11.sql  12.sql  13.sql  14.sql  15.sql  16.sql  17.sql  18.sql  19.sql  2.sql  20.sql  21.sql  22.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  GNUmakefile  bcd2.c  bcd2.h  bm_utils.c  build.c  config.h  dists.dss  driver.c  dss.h  dsstypes.h  load_stub.c  load_tbl.c  permute.c  permute.h  print.c  qgen.c  rnd.c  rnd.h  (+7 more)
binsrc/virtuoso/: viconfig.c  viunix.c  viwin32.c
libsrc/Dk/: Dkbox.c  Dkbox.h  Dkhash.c  Dkhash.h  Dkhashext.c  Dkhashext.h  Dkmem.c  Dkpool.c  Dkpool.h  Dksestcp.c  Dksimd.h  Dksttcp.c  Dkutil.h  Makefile.am
libsrc/Thread/: Dkthread.h  sched_pthread.c  sched_single.c  thread_attr.c  thread_int.h
libsrc/Wi/: 2pc.c  2pc.h  2pc_client.c  2pc_client.h  CLI.h  CLIcr.c  CLIodbc3.c  CLIsql1.c  CLIsql2.c  CLIsql3.c  CLIuti.c  CLIw.c  Makefile.am  aqueue.c  aqueue.h  arith.c  arith.h  auxfiles.c  bif_audio.c  bif_audio_tags.h  bif_crypto.c  bif_date.c  bif_dav.c  bif_diff.c  bif_explain.c  bif_file.c  bif_geo.c  bif_gnw.c  bif_imap.c  bif_intl.c  bif_json.c  bif_kerberoscli.c  bif_ldapcli.c  bif_mts.c  bif_nntp.c  bif_phrasematch.c  bif_pop3.c  bif_regexp.c  bif_repl.c  bif_search_excerpt.c  (+337 more)
libsrc/plugin/: Makefile.am  gate_virtuoso.h  gate_virtuoso_stubs.h  idxext_sample.c  idxext_sample.exp  v7proj4.exp  v7proj4.sql  v7proj4_plugin.c
libsrc/util/: md5.h
